Fixed Jump to Present Bar

--- a/discorddark.css
+++ b/discorddark.css
@@ -478,7 +478,7 @@ h2.name-3BUDLf, h2.membersGroup-2eiWxl, .name-3BUDLf .overflow-1wOqNV {
 .jumpToPresentBar-1cEnH0{
 	border: 1px solid transparent;
 	border-radius: 5px;
-	width: 370px;
+	width: auto;
 	margin-left: 1px;
 	margin-bottom: -3px!important;
 }
